nginx.service.yml
apiVersion: v1
kind: Service
metadata:
  name: cookwell-redirect-svc
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: cookwell-redirect-pod
